# pbtkit

./: .gitignore  CLAUDE.md  README.md  generators.py  justfile  minithesis.py  pyproject.toml  test_minithesis.py
.claude/: CLAUDE.md  ralph-loop.local.md
.claude/skills/debug-shrink/: SKILL.md
.github/workflows/: ci.yml
book/: book.toml
book/src/content/: bytes.md  caching.md  collections.md  core.md  database.md  draw_names.md  floats.md  shrink_bind.md  shrink_bytes.md  shrink_duplication.md  shrink_index.md  shrink_integers.md  shrink_mutation.md  shrink_sequence.md  shrink_sorting.md  shrink_strings.md  targeting.md  text.md
book/src/css/: custom.css
src/minithesis/: __init__.py  bytes.py  caching.py  collections.py  core.py  database.py  features.py  floats.py  generators.py  minithesis.py  targeting.py  text.py
src/minithesis/shrinking/: advanced_bytes_passes.py  advanced_integer_passes.py  advanced_string_passes.py  bind_deletion.py  duplication_passes.py  index_passes.py  mutation.py  sequence.py  sequence_redistribution.py  sorting.py
src/pbtkit/: __init__.py  bytes.py  caching.py  collections.py  core.py  database.py  draw_names.py  edge_case_boosting.py  features.py  floats.py  generators.py  multi_bug.py  multi_example.py  span_mutation.py  spans.py  targeting.py  text.py
src/pbtkit/shrinking/: advanced_bytes_passes.py  advanced_integer_passes.py  advanced_string_passes.py  bind_deletion.py  duplication_passes.py  index_passes.py  mutation.py  sequence.py  sequence_redistribution.py  sorting.py
tests/: conftest.py  test_bytes.py  test_choice_index.py  test_collections.py  test_core.py  test_draw_names.py  test_exercise_shrink_paths.py  test_features.py  test_findability_comparison.py  test_floats.py  test_generators.py  test_hypothesis.py  test_minismith.py  test_multi_bug.py  test_multi_example.py  test_pbtsmith.py  test_reporting_snapshots.py  test_shrink_comparison.py  test_spans.py  test_targeting.py  test_text.py
tests/__snapshots__/: test_reporting_snapshots.ambr
tests/findability/: conftest.py  test_arithmetic.py  test_collections.py  test_floats.py  test_pbtsmith_regressions.py  test_types.py
tests/shrink_quality/: conftest.py  test_bytes.py  test_collections.py  test_composite.py  test_flatmap.py  test_floats.py  test_integers.py  test_mixed_types.py  test_strings.py
tools/: build_book.py  compile_minithesis.py  compile_pbtkit.py  coverage_features.py  test_compiled.py  test_features.py
