[project]
name = "minithesis"
version = "0.1.0"
description = "A minimal property-based testing library"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "hypothesis",
    "pytest",
    "coverage",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["PLC0415", "I001"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]
