[project]
name = "pbtkit"
version = "0.1.0"
description = "A minimal property-based testing library"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "hypothesis",
    "pytest",
    "pytest-timeout",
    "coverage",
    "ruff==0.15.9",
    "pyright",
    "libcst",
    "syrupy",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "hypothesis: pbtsmith hypothesis tests (slow)",
]

[tool.ruff.lint]
select = ["PLC0415", "I001", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["pbtkit"]
known-third-party = ["hypothesis"]

[tool.ruff.lint.per-file-ignores]
# Conditional imports inside feature_enabled() guards are intentional —
# the single-file compiler strips these blocks when the feature is disabled.
"src/pbtkit/bytes.py" = ["PLC0415"]
"src/pbtkit/core.py" = ["PLC0415"]
"src/pbtkit/database.py" = ["PLC0415"]
"src/pbtkit/floats.py" = ["PLC0415"]
"src/pbtkit/multi_bug.py" = ["PLC0415"]
"src/pbtkit/text.py" = ["PLC0415"]
# Tests use deferred imports for symbols pulled from the database
# module after monkeypatching multi_bug off.
"tests/test_multi_bug.py" = ["PLC0415"]
"tests/test_reporting_snapshots.py" = ["PLC0415"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "assert False,",
    "case _:",
]
# feature_enabled() guards are compile-time only — the false branch
# is only reachable in compiled variants with the feature disabled.
partial_branches = [
    "if feature_enabled\\(",
]
